kubernetes/src/services/go-backend/production/Deployment.go-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-backend
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: go-backend
          image: 857059614049.dkr.ecr.us-east-2.amazonaws.com/services/go-backend:0.3.0 # production_services/go-backend
