kubernetes/src/services/go-backend/production/Ingress.traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress-traefik-kustomize.production.kubestarterkit.com
spec:
  tls:
    - hosts:
        - ingress-traefik-kustomize.production.kubestarterkit.com
  rules:
    - host: "ingress-traefik-kustomize.production.kubestarterkit.com"
